[package]
name = "proof_generation"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {version="4.9.0", features=["macros"]}
actix-cors = "0.7.0"
chrono = "0.4.39"
env_logger = "0.11.6"
hex = "0.4.3"
log = "0.4.25"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.135"
